clusters/flux-system/config/loki-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: loki-access-policy
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: loki
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/monitoring/sa/grafana
